--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "vite": "^7.0.6"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.11",
+    "@popperjs/core": "^2.11.8",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
+    "bootstrap": "^5.3.7",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "tailwindcss": "^4.1.11"
+    "react-dom": "^19.1.1"
   }
 }
